src/core/ir/jit/snapshots/tailcall__core__ir__jit__tests__query-4.snap
---
source: src/core/ir/jit/mod.rs
expression: "format!(\"{:#?}\", q_blueprint)"
---
QueryPlan {
    fields: [],
}
