src/core/ir/jit/snapshots/tailcall__core__ir__jit__tests__query-7.snap
---
source: src/core/ir/jit/mod.rs
expression: "format!(\"{:#?}\", q_blueprint)"
---
QueryPlan {
    fields: [
        Field {
            id: 0,
            name: "user",
            ir: "Some(..)",
            type_of: User,
            args: [
                Arg {
                    id: 0,
                    name: "id",
                    type_of: Int!,
                    value: Some(
                        Variable(
                            Name(
                                "id",
                            ),
                        ),
                    ),
                    default_value: None,
                },
            ],
        },
        Field {
            id: 1,
            name: "id",
            type_of: Int!,
            refs: Some(
                Parent(0),
            ),
        },
        Field {
            id: 2,
            name: "name",
            type_of: String!,
            refs: Some(
                Parent(0),
            ),
        },
    ],
}
